# datahub-infa-autosys

./: .gitignore  LICENSE  README.md  informatica_lineage.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/: OPERATIONAL_LINEAGE.md  ORACLE_STORED_PROCS.md  SSIS.md  abinitio-rest.md  abinitio.md  airflow.md  api-reference.md  development.md  example_usage.py  getting-started.md  imformatica_parser_new.md  index.md  recipes.md
docs/sources/: abinitio.md  autosys.md  essbase.md  index.md  informatica.md  oracle-operational.md  ssis.md
examples/airflow/: k8s_metadata_ingestion_dag.py  metadata_ingestion_dag.py
examples/configs/: README.md  abinitio_io_mapping.json  oracle_stored_procs.json
examples/essbase-datahub-connector/: README.md  pyproject.toml
examples/essbase-datahub-connector/examples/: sample_extraction.yaml
examples/essbase-datahub-connector/src/essbase_datahub/: __init__.py  cli.py  connector.py
examples/essbase-datahub-connector/src/essbase_datahub/emitters/: __init__.py  datahub_emitter.py
examples/essbase-datahub-connector/src/essbase_datahub/extractors/: __init__.py  calc_extractor.py  essbase_client.py  lineage_extractor.py  schema_extractor.py
examples/essbase-datahub-connector/src/essbase_datahub/models/: __init__.py  essbase_models.py  openlineage_models.py
examples/essbase-datahub-connector/src/essbase_datahub/parsers/: __init__.py
examples/essbase-datahub-connector/src/essbase_datahub/utils/: __init__.py
examples/essbase-datahub-connector/tests/: __init__.py  test_calc_parser.py  test_models.py
examples/kubernetes/: README.md  configmap-recipes.yaml  secret-credentials.yaml
examples/recipes/: abinitio.yml  autosys_jil.yml  essbase.yml  infa_pmrep.yml  oracle_operational.yml  ssis_dtsx.yml
src/datahub_custom_sources/: __init__.py  cli.py  config.py  runner.py
src/datahub_custom_sources.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/datahub_custom_sources/airflow/: __init__.py  operators.py
src/datahub_custom_sources/emit/: __init__.py  builders.py
src/datahub_custom_sources/extractors/: __init__.py  abinitio.py  autosys_jil.py  essbase_client.py  essbase_models.py  essbase_schema.py  informatica_xml.py  oracle_stored_proc.py  pmrep.py  ssis_dtsx.py
src/datahub_custom_sources/operational/: __init__.py  oracle_runner.py
src/datahub_custom_sources/sources/: __init__.py  abinitio.py  autosys.py  essbase.py  informatica.py  oracle_operational.py  ssis.py
src/datahub_custom_sources/utils/: __init__.py  paths.py  subprocess.py  urns.py
src/dh_infa_autosys/: __init__.py  cli.py  config.py
src/dh_infa_autosys/emit/: __init__.py  builders.py
src/dh_infa_autosys/extractors/: pmrep.py
src/dh_infa_autosys/operational/: oracle_runner.py
src/dh_infa_autosys/sources/: autosys.py  common.py  informatica.py  oracle_operational.py
src/dh_infa_autosys/utils/: __init__.py  subprocess.py
tests/: test_infa_parser.py  test_jil_parser.py  test_oracle_stored_proc.py
