[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-infa-autosys"
version = "0.1.0"
description = "Custom DataHub ingestion sources for Informatica (pmrep) and AutoSys + Oracle operational lineage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Your Team"}]
dependencies = [
  "acryl-datahub>=1.2.0",        # DataHub python + ingestion framework (pydantic v2)
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "python-dateutil>=2.9",
  "oracledb>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
dhia = "dh_infa_autosys.cli:app"

# DataHub ingestion plugin entry-points (for `datahub ingest` / `datahub check plugins`)
[project.entry-points."datahub.ingestion.source.plugins"]
infa_pmrep = "dh_infa_autosys.sources.informatica:InformaticaPmrepSource"
autosys_jil = "dh_infa_autosys.sources.autosys:AutoSysJilSource"
oracle_operational = "dh_infa_autosys.sources.oracle_operational:OracleOperationalSource"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
